bk_ida/gccida/c0/apply_delayed_renames
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/apply_delayed_renames/src/ssa.c:1244:29: error: use of undeclared identifier 'machine_mode'
r->new_reg = gen_reg_rtx( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)r->old_reg)); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/apply_delayed_renames/src/ssa.c:1244:44: error: expected expression
r->new_reg = gen_reg_rtx( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)r->old_reg)); 
                                           ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/apply_delayed_renames/src/obj/ssa.o] Error 1
